# Happiness_Exchange

./: .dockerignore  .env.example  .gitignore  README.md  podman-compose.yml
backend/: .env.example  Containerfile  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 061c2b1bbbd0_bootstrap.py  141d9836e35c_add_products_and_uploads.py  2e61ef57e77f_create_users_table.py  50f479a36c32_add_purchases_and_interactions.py  8d3c4d7ab2ef_add_joy_gifts.py  bf0db0adfd51_add_points_and_checkins.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  checkin.py  emotion_product.py  joy_gift.py  point_transaction.py  product_collection.py  product_comment.py  product_image.py  product_like.py  purchase.py  user.py
backend/app/repositories/: checkin_repository.py  joy_gift_repository.py  point_transaction_repository.py  product_collection_repository.py  product_comment_repository.py  product_like_repository.py  product_repository.py  purchase_repository.py  upload_repository.py  user_repository.py
backend/app/schemas/: auth.py  avatars.py  checkins.py  interactions.py  persona.py  points.py  products.py  uploads.py
backend/app/services/: auth_service.py  checkin_service.py  interaction_service.py  point_service.py  user_service.py  (+2 more)
backend/scripts/: repair_garbled_content.py  repair_product_alignment.py  seed_demo_content.py
backend/tests/: conftest.py  test_auth.py  test_interactions.py  test_points_and_checkins.py  test_products_and_uploads.py
(+73 files in other folders)
